initial commit - got it working - added ignore_worlds (as it interfered with mEInblok logic)